--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="form-group">
                     <label for="description">问题补充(必填，请参照右键提示)</label>
-                    <textarea name="description" id="description" class="form-control" th:value="${description}"  cols="30" rows="10"></textarea>
+                    <textarea name="description" id="description" class="form-control" th:text="${description}"  cols="30" rows="10"></textarea>
                 </div>
                 <script type="text/javascript">
                     $(function () {
@@ -102,6 +102,5 @@
         </div>
     </div>
 </div>
-<div></div>
 </body>
 </html>
